fix: body scroll when Backdrop is visible
we want to disable scrolling when Backdrop is visible

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,12 @@ ul {
   list-style-type: none;
 }
 
+body.modal-open {
+  overflow: hidden;
+  position: fixed;
+  overscroll-behavior: none;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 12px;
